--- a/MatchApp/MatchApp/Base.lproj/Main.storyboard
+++ b/MatchApp/MatchApp/Base.lproj/Main.storyboard
@@ -20,59 +20,84 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="IMj-h5-YUl">
                                 <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                             </imageView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="zFu-Do-reU">
-                                <rect key="frame" x="44" y="0.0" width="808" height="393"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bhC-TY-MGH">
-                                    <size key="itemSize" width="128" height="128"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="rq0-GN-sES">
-                                        <rect key="frame" x="0.0" y="0.0" width="158" height="224"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="8V5-eF-c64">
-                                            <rect key="frame" x="0.0" y="0.0" width="158" height="224"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="card1" translatesAutoresizingMaskIntoConstraints="NO" id="0sh-Xd-nuM">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="HGz-Yg-lmP">
+                                <rect key="frame" x="60" y="0.0" width="792" height="393"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time Remaining: 10" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q6T-0Q-0BT">
+                                        <rect key="frame" x="301" y="0.0" width="190" height="20.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="190" id="9iS-jP-uLy"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="zFu-Do-reU">
+                                        <rect key="frame" x="0.0" y="30.5" width="792" height="362.5"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bhC-TY-MGH">
+                                            <size key="itemSize" width="128" height="128"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CardCell" id="rq0-GN-sES" userLabel="Card Cell" customClass="CardCollectionViewCell" customModule="MatchApp" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="158" height="224"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="8V5-eF-c64">
                                                     <rect key="frame" x="0.0" y="0.0" width="158" height="224"/>
-                                                </imageView>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="back" translatesAutoresizingMaskIntoConstraints="NO" id="DDv-De-LrQ">
-                                                    <rect key="frame" x="0.0" y="0.0" width="158" height="224"/>
-                                                </imageView>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="0sh-Xd-nuM" firstAttribute="top" secondItem="8V5-eF-c64" secondAttribute="top" id="2Fn-aT-7md"/>
-                                                <constraint firstAttribute="trailing" secondItem="0sh-Xd-nuM" secondAttribute="trailing" id="2tk-OE-ld3"/>
-                                                <constraint firstItem="0sh-Xd-nuM" firstAttribute="leading" secondItem="8V5-eF-c64" secondAttribute="leading" id="Ace-wY-5lV"/>
-                                                <constraint firstAttribute="trailing" secondItem="DDv-De-LrQ" secondAttribute="trailing" id="Fu1-V6-AhP"/>
-                                                <constraint firstItem="DDv-De-LrQ" firstAttribute="top" secondItem="8V5-eF-c64" secondAttribute="top" id="XI6-Qg-y6K"/>
-                                                <constraint firstItem="DDv-De-LrQ" firstAttribute="leading" secondItem="8V5-eF-c64" secondAttribute="leading" id="Zzu-9n-rbp"/>
-                                                <constraint firstAttribute="bottom" secondItem="0sh-Xd-nuM" secondAttribute="bottom" id="bGY-cj-58X"/>
-                                                <constraint firstAttribute="bottom" secondItem="DDv-De-LrQ" secondAttribute="bottom" id="vLU-7V-u4e"/>
-                                            </constraints>
-                                        </collectionViewCellContentView>
-                                        <size key="customSize" width="158" height="224"/>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="card1" translatesAutoresizingMaskIntoConstraints="NO" id="0sh-Xd-nuM">
+                                                            <rect key="frame" x="0.0" y="0.0" width="158" height="224"/>
+                                                        </imageView>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="back" translatesAutoresizingMaskIntoConstraints="NO" id="DDv-De-LrQ">
+                                                            <rect key="frame" x="0.0" y="0.0" width="158" height="224"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="0sh-Xd-nuM" firstAttribute="top" secondItem="8V5-eF-c64" secondAttribute="top" id="2Fn-aT-7md"/>
+                                                        <constraint firstAttribute="trailing" secondItem="0sh-Xd-nuM" secondAttribute="trailing" id="2tk-OE-ld3"/>
+                                                        <constraint firstItem="0sh-Xd-nuM" firstAttribute="leading" secondItem="8V5-eF-c64" secondAttribute="leading" id="Ace-wY-5lV"/>
+                                                        <constraint firstAttribute="trailing" secondItem="DDv-De-LrQ" secondAttribute="trailing" id="Fu1-V6-AhP"/>
+                                                        <constraint firstItem="DDv-De-LrQ" firstAttribute="top" secondItem="8V5-eF-c64" secondAttribute="top" id="XI6-Qg-y6K"/>
+                                                        <constraint firstItem="DDv-De-LrQ" firstAttribute="leading" secondItem="8V5-eF-c64" secondAttribute="leading" id="Zzu-9n-rbp"/>
+                                                        <constraint firstAttribute="bottom" secondItem="0sh-Xd-nuM" secondAttribute="bottom" id="bGY-cj-58X"/>
+                                                        <constraint firstAttribute="bottom" secondItem="DDv-De-LrQ" secondAttribute="bottom" id="vLU-7V-u4e"/>
+                                                    </constraints>
+                                                </collectionViewCellContentView>
+                                                <size key="customSize" width="158" height="224"/>
+                                                <connections>
+                                                    <outlet property="backImageView" destination="DDv-De-LrQ" id="ev1-BB-dfJ"/>
+                                                    <outlet property="frontImageView" destination="0sh-Xd-nuM" id="bjV-Cu-QRT"/>
+                                                </connections>
+                                            </collectionViewCell>
+                                        </cells>
+                                    </collectionView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="zFu-Do-reU" firstAttribute="width" secondItem="HGz-Yg-lmP" secondAttribute="width" id="rMp-TJ-zM7"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="IMj-h5-YUl" secondAttribute="trailing" id="A3z-tC-56t"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zFu-Do-reU" secondAttribute="trailing" id="AaT-PS-mvA"/>
-                            <constraint firstItem="zFu-Do-reU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="GeA-q9-nNs"/>
                             <constraint firstItem="IMj-h5-YUl" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="T7K-zF-CKA"/>
+                            <constraint firstItem="HGz-Yg-lmP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="WnW-6y-6kN"/>
                             <constraint firstItem="IMj-h5-YUl" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Znm-wK-MJN"/>
                             <constraint firstAttribute="bottom" secondItem="IMj-h5-YUl" secondAttribute="bottom" id="bXa-oG-RrX"/>
-                            <constraint firstItem="zFu-Do-reU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="fJn-1c-BxB"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="zFu-Do-reU" secondAttribute="bottom" id="rZZ-ey-DNh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HGz-Yg-lmP" secondAttribute="trailing" id="f3j-jE-96y"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="HGz-Yg-lmP" secondAttribute="bottom" id="kjw-Jv-Rre"/>
+                            <constraint firstItem="HGz-Yg-lmP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="tyk-ia-394"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="zFu-Do-reU" id="91Q-dS-M4n"/>
+                        <outlet property="timerLabel" destination="Q6T-0Q-0BT" id="BXK-LM-T0E"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
